--- a/login.html
+++ b/login.html
@@ -1,28 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Log-in</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <style>
-
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      width: 100vw;
-    }
-    iframe {
-      height: 100%;
-      width: 100%;
-      border: none; 
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/sidebar.css">
 </head>
 <body>
-  <iframe src="sidebar.html"></iframe>
+    <header id="Header" class="py-3 mb-4 border-bottom shadow">
+        <div class="container-fluid align-items-center d-flex">
+            <div class="flex-shrink-1">
+                <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-dark text-decoration-none">
+                    <i class="bi bi-bootstrap fs-2 text-dark"></i>
+                </a>
+            </div>
+            <div class="ms-3 align-items-center">
+                <h1 class="m-0">Eskisehir Technical University</h1>
+            </div>
+        </div>
+    </header>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div class="container-fluid overflow-hidden">
+        <div class="row vh-100 overflow-auto">
+            <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
+                <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
+                  <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start">
+                    <li class="nav-item">
+                        <a href="home.html" class="nav-link px-sm-0 px-2">
+                            <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline">Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="university.html" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
+                            <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">University</span> </a>
+                    </li>
+                    <li>
+                        <a href="acadamics.html" class="nav-link px-sm-0 px-2">
+                            <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Acadamics</span></a>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="toggle-submenu1" class="collapse-checkbox">
+                        <label for="toggle-submenu1" class="nav-link px-0 align-middle" data-bs-toggle="collapse" data-bs-target="students.html">
+                            <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Students</span>
+                        </label>
+                        <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+                            <li class="w-100">
+                                <a href="login.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Student-Login</span> </a>
+                            </li>
+                            <li>
+                                <a href="documents.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Documents</span> </a>
+                            </li>
+                        </ul>
+                    </li>
+                    
+                    <li>
+                        <a href="research.html" class="nav-link px-sm-0 px-2">
+                            <i class="fs-5 bi-grid"></i><span class="ms-1 d-none d-sm-inline">Research</span></a>
+                    </li>
+                    <li>
+                        <a href="campuslife.html" class="nav-link px-sm-0 px-2">
+                            <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Campus-life</span> </a>
+                    </li>
+                </ul>
+                </div>
+            </div>
+            <div class="col d-flex flex-column h-sm-100">
+                <main class="row overflow-auto">
+                    <div class="col pt-4">
+                        <h3>Student Login</h3>
+                        <form action="home.html" method="POST">
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" name="username" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Log in</button>
+                        </form>
+                    </div>
+                </main>
+                <footer class="row bg-light py-4 mt-auto text-center">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>Eskisehir Technical University<br>
+                                   Address: 123 Example Street, City, Country<br>
+                                   Phone: +123 456 7890<br>
+                                   Email: info@example.com</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <p>&copy; 2024 Eskisehir Technical University. All rights reserved. | Designed by Sevde Secer.</p>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
