some new properties added.

--- a/login.html
+++ b/login.html
@@ -32,8 +32,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="university.html" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
-                            <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">University</span> </a>
+                        <a href="university.html" class="nav-link px-sm-0 px-2">
+                            <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">University</span>
+                        </a>
                     </li>
                     <li>
                         <a href="acadamics.html" class="nav-link px-sm-0 px-2">
