--- a/documents.html
+++ b/documents.html
@@ -25,57 +25,62 @@
 
     <div class="container-fluid overflow-hidden">
         <div class="row vh-100 overflow-auto">
-            <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
-                <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
-                    <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start">
+            <div class="col-3 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
+                <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-sm-start px-3 pt-2 text-white">
+                    <ul class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start">
                         <li class="nav-item">
                             <a href="home.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline">Home</span>
+                                <i class="fs-5 bi-house"></i><span class="ms-1 d-inline">Home</span>
                             </a>
                         </li>
                         <li>
-                            <a href="university.html" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">University</span> </a>
+                            <a href="university.html" class="nav-link px-sm-0 px-2">
+                                <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">University</span>
+                            </a>
                         </li>
+
                         <li>
                             <a href="acadamics.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Acadamics</span></a>
+                                <i class="fs-5 bi-table"></i><span class="ms-1 d-inline">Acadamics</span></a>
                         </li>
                         <li>
-                            <input type="checkbox" id="toggle-submenu1" class="collapse-checkbox">
-                            <label for="toggle-submenu1" class="nav-link px-0 align-middle" data-bs-toggle="collapse" data-bs-target="students.html">
-                                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Students</span>
+                            <input type="checkbox" id="toggle-submenu1" class="collapse-checkbox  ms-1 ps-1">
+                            <label for="toggle-submenu1" class="nav-link px-sm-0 px-2 align-middle" data-bs-toggle="collapse" data-bs-target="students.html">
+                                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-inline">Students</span>
                             </label>
                             <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                                 <li class="w-100">
-                                    <a href="login.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Student-Login</span> </a>
+                                    <a href="login.html" class="nav-link px-0"> <span class= "d-inline">Student-Login</span> </a>
                                 </li>
                                 <li>
-                                    <a href="documents.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Documents</span> </a>
+                                    <a href="documents.html" class="nav-link px-0"> <span class= "d-inline">Documents</span> </a>
                                 </li>
                             </ul>
                         </li>
                         
                         <li>
                             <a href="research.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-grid"></i><span class="ms-1 d-none d-sm-inline">Research</span></a>
+                                <i class="fs-5 bi-grid"></i><span class="ms-1 d-inline">Research</span></a>
                         </li>
                         <li>
                             <a href="campuslife.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Campus-life</span> </a>
+                                <i class="fs-5 bi-people"></i><span class="ms-1 d-inline">Campus-life</span> </a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="col d-flex flex-column h-sm-100">
-                <main class="row overflow-auto">
-                    <div class="col pt-4">
-                        <h3>Vertical Sidebar that switches to Horizontal Navbar</h3>
-                        <p class="lead">An example multi-level sidebar with collasible menu items. The menu functions like an "accordion" where only a single menu is be open at a time.</p>
-                        <hr />
-                        <h3>More content...</h3>
-                        <p>Sriracha biodiesel taxidermy organic post-ironic, Intelligentsia salvia mustache 90's code editing brunch. Butcher polaroid VHS art party, hashtag Brooklyn deep v PBR narwhal sustainable mixtape swag wolf squid tote bag. Tote bag cronut semiotics, raw denim deep v taxidermy messenger bag. Tofu YOLO Etsy, direct trade ethical Odd Future jean shorts paleo. Forage Shoreditch tousled aesthetic irony, street art organic Bushwick artisan cliche semiotics ugh synth chillwave meditation. Shabby chic lomo plaid vinyl chambray Vice. Vice sustainable cardigan, Williamsburg master cleanse hella DIY 90's blog.</p>
-                        <p>Ethical Kickstarter PBR asymmetrical lo-fi. Dreamcatcher street art Carles, stumptown gluten-free Kickstarter artisan Wes Anderson wolf pug. Godard sustainable you probably haven't heard of them, vegan farm-to-table Williamsburg slow-carb readymade disrupt deep v. Meggings seitan Wes Anderson semiotics, cliche American Apparel whatever. Helvetica cray plaid, vegan brunch Banksy leggings +1 direct trade. Wayfarers codeply PBR selfies. Banh mi McSweeney's Shoreditch selfies, forage fingerstache food truck occupy YOLO Pitchfork fixie iPhone fanny pack art party Portland.</p>
+            <div class="col d-flex flex-column h-sm-100 align-items-center">
+                <main class="row overflow-auto ">
+                    <div class="col pt-4 text-center">
+                        <h3>--- Documents ---</h3>
+                        <br>
+                        <ul class="documents-list">
+                            <li><a href="/downloadableDocuments/Dersten Çekilme Dilekcesi.doc" download>Course withdrawal petition</a></li>
+                            <li><a href="/downloadableDocuments/Kayıt dondurma Dilekçesi.docx" download>Registration suspension petition</a></li>
+                            <li><a href="/downloadableDocuments/Kontenjan Talep Formu.doc" download>Quota request form</a></li>
+                            <li><a href="/downloadableDocuments/Mazeret Sınavı Dilekçesi.doc" download>Make-up exam petition</a></li>
+                            <li><a href="/downloadableDocuments/Sınav Çakışma Bildirim Formu.doc" download>Exam conflict notification form</a></li>
+                        </ul>
                     </div>
                 </main>
                 <footer class="row bg-light py-4 mt-auto text-center">
@@ -92,7 +97,8 @@
                                 <p>&copy; 2024 Eskisehir Technical University. All rights reserved. | Designed by Sevde Secer.</p>
                             </div>
                         </div>
-                    </div>                </footer>
+                    </div>
+                </footer>
             </div>
         </div>
     </div>
