--- a/university.html
+++ b/university.html
@@ -25,44 +25,45 @@
 
     <div class="container-fluid overflow-hidden">
         <div class="row vh-100 overflow-auto">
-            <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
-                <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
-                    <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start">
+            <div class="col-3 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
+                <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-sm-start px-3 pt-2 text-white">
+                    <ul class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start">
                         <li class="nav-item">
                             <a href="home.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline">Home</span>
+                                <i class="fs-5 bi-house"></i><span class="ms-1 d-inline">Home</span>
                             </a>
                         </li>
                         <li>
-                            <a href="university.html" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">University</span> </a>
+                            <a href="university.html" class="nav-link px-sm-0 px-2">
+                                <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline">University</span>
+                            </a>
                         </li>
                         <li>
                             <a href="acadamics.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Acadamics</span></a>
+                                <i class="fs-5 bi-table"></i><span class="ms-1 d-inline">Acadamics</span></a>
                         </li>
                         <li>
-                            <input type="checkbox" id="toggle-submenu1" class="collapse-checkbox">
-                            <label for="toggle-submenu1" class="nav-link px-0 align-middle" data-bs-toggle="collapse" data-bs-target="students.html">
-                                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Students</span>
+                            <input type="checkbox" id="toggle-submenu1" class="collapse-checkbox  ms-1 ps-1">
+                            <label for="toggle-submenu1" class="nav-link px-sm-0 px-2 align-middle" data-bs-toggle="collapse" data-bs-target="students.html">
+                                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-inline">Students</span>
                             </label>
                             <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                                 <li class="w-100">
-                                    <a href="login.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Student-Login</span> </a>
+                                    <a href="login.html" class="nav-link px-0"> <span class= "d-inline">Student-Login</span> </a>
                                 </li>
                                 <li>
-                                    <a href="documents.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Documents</span> </a>
+                                    <a href="documents.html" class="nav-link px-0"> <span class= "d-inline">Documents</span> </a>
                                 </li>
                             </ul>
                         </li>
                         
                         <li>
                             <a href="research.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-grid"></i><span class="ms-1 d-none d-sm-inline">Research</span></a>
+                                <i class="fs-5 bi-grid"></i><span class="ms-1 d-inline">Research</span></a>
                         </li>
                         <li>
                             <a href="campuslife.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Campus-life</span> </a>
+                                <i class="fs-5 bi-people"></i><span class="ms-1 d-inline">Campus-life</span> </a>
                         </li>
                     </ul>
                 </div>
@@ -92,7 +93,8 @@
                                 <p>&copy; 2024 Eskisehir Technical University. All rights reserved. | Designed by Sevde Secer.</p>
                             </div>
                         </div>
-                    </div>                </footer>
+                    </div>
+                </footer>
             </div>
         </div>
     </div>
