--- a/acadamics.html
+++ b/acadamics.html
@@ -5,6 +5,8 @@
     <title>Academics</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/academics.css">
+
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
@@ -56,11 +58,6 @@
                                 </li>
                             </ul>
                         </li>
-                        
-                        <li>
-                            <a href="research.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-grid"></i><span class="ms-1 d-inline">Research</span></a>
-                        </li>
                         <li>
                             <a href="campuslife.html" class="nav-link px-sm-0 px-2">
                                 <i class="fs-5 bi-people"></i><span class="ms-1 d-inline">Campus-life</span> </a>
@@ -71,75 +68,128 @@
             <div class="col d-flex flex-column h-sm-100">
                 <main class="row overflow-auto">
                     <div class="col pt-4">
-                        <h3>Faculties</h3>
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Dean</th>
-                                    <th>Contact</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Faculty information rows -->
-                                <tr>
-                                    <td>Faculty of Engineering</td>
-                                    <td>Dr. John Doe</td>
-                                    <td>engineering@example.com</td>
-                                </tr>
-                                <!-- Add more faculties here -->
-                            </tbody>
-                        </table>
-                        <hr />
-                        <h3>Institutes</h3>
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Director</th>
-                                    <th>Contact</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Institute information rows -->
-                                <tr>
-                                    <td>Institute of Science</td>
-                                    <td>Prof. Jane Smith</td>
-                                    <td>science@example.com</td>
-                                </tr>
-                                <!-- Add more institutes here -->
-                            </tbody>
-                        </table>
-                        <hr />
-                        <h3>Vocational Higher Schools</h3>
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Director</th>
-                                    <th>Contact</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Vocational higher school information rows -->
-                                <tr>
-                                    <td>Vocational School of Health</td>
-                                    <td>Dr. Michael Johnson</td>
-                                    <td>health@example.com</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="container">
+                            <h3>Faculties</h3>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Faculty</th>
+                                        <th>Dean</th>
+                                        <th>Contact</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Faculty of Arts</td>
+                                        <td>Prof. Emily Williams</td>
+                                        <td>arts@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Faculty of Business</td>
+                                        <td>Dr. Sarah Lee</td>
+                                        <td>business@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Faculty of Law</td>
+                                        <td>Prof. David Brown</td>
+                                        <td>law@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Faculty of Medicine</td>
+                                        <td>Dr. Elizabeth Taylor</td>
+                                        <td>medicine@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Faculty of Social Sciences</td>
+                                        <td>Prof. Michael Garcia</td>
+                                        <td>social@example.com</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <h3>Institutes</h3>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Institute</th>
+                                        <th>Director</th>
+                                        <th>Contact</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Institute of Technology</td>
+                                        <td>Dr. Peter Wilson</td>
+                                        <td>technology@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Institute of Management</td>
+                                        <td>Prof. Olivia Martinez</td>
+                                        <td>management@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Institute of Education</td>
+                                        <td>Dr. Christopher Adams</td>
+                                        <td>education@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Institute of Agriculture</td>
+                                        <td>Prof. Samantha Brown</td>
+                                        <td>agriculture@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Institute of Architecture</td>
+                                        <td>Dr. Daniel Thompson</td>
+                                        <td>architecture@example.com</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <h3>Vocational Higher Schools</h3>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Director</th>
+                                        <th>Contact</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Vocational School of Engineering</td>
+                                        <td>Prof. Andrew Wilson</td>
+                                        <td>engineering@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Vocational School of Business</td>
+                                        <td>Dr. Jessica Martinez</td>
+                                        <td>business@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Vocational School of Information Technology</td>
+                                        <td>Dr. Christopher Davis</td>
+                                        <td>it@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Vocational School of Tourism</td>
+                                        <td>Prof. Emma Thompson</td>
+                                        <td>tourism@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Vocational School of Design</td>
+                                        <td>Dr. Alexander Garcia</td>
+                                        <td>design@example.com</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </main>
-
                 <footer class="row bg-light py-4 mt-auto text-center">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
                                 <p>Eskisehir Technical University<br>
                                    Address: 123 Example Street, City, Country<br>
-                                   Phone: +123 456 7890<br>
-                                   Email: info@example.com</p>
+                                   Email: sevdeseceer@gmail.com</p>
                             </div>
                         </div>
                         <div class="row">
