--- a/documents.html
+++ b/documents.html
@@ -5,6 +5,8 @@
     <title>Documents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/documents.css">
+
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
@@ -57,11 +59,6 @@
                                 </li>
                             </ul>
                         </li>
-                        
-                        <li>
-                            <a href="research.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-grid"></i><span class="ms-1 d-inline">Research</span></a>
-                        </li>
                         <li>
                             <a href="campuslife.html" class="nav-link px-sm-0 px-2">
                                 <i class="fs-5 bi-people"></i><span class="ms-1 d-inline">Campus-life</span> </a>
@@ -73,6 +70,7 @@
                 <main class="row overflow-auto ">
                     <div class="col pt-4 text-center">
                         <h3>--- Documents ---</h3>
+                        <h6 class="text-secondary">You can download it by clicking.<h6>
                         <br>
                         <ul class="documents-list">
                             <li><a href="/downloadableDocuments/Dersten Çekilme Dilekcesi.doc" download>Course withdrawal petition</a></li>
@@ -89,8 +87,7 @@
                             <div class="col-md-12">
                                 <p>Eskisehir Technical University<br>
                                    Address: 123 Example Street, City, Country<br>
-                                   Phone: +123 456 7890<br>
-                                   Email: info@example.com</p>
+                                   Email: sevdeseceer@gmail.com</p>
                             </div>
                         </div>
                         <div class="row">
