--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <title>Student Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/login.css">
+
 </head>
 <body>
     <header id="Header" class="py-3 mb-4 border-bottom shadow">
@@ -54,11 +56,6 @@
                             </li>
                         </ul>
                     </li>
-                    
-                    <li>
-                        <a href="research.html" class="nav-link px-sm-0 px-2">
-                            <i class="fs-5 bi-grid"></i><span class="ms-1 d-none d-sm-inline">Research</span></a>
-                    </li>
                     <li>
                         <a href="campuslife.html" class="nav-link px-sm-0 px-2">
                             <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline">Campus-life</span> </a>
@@ -66,20 +63,28 @@
                 </ul>
                 </div>
             </div>
-            <div class="col d-flex flex-column h-sm-100">
-                <main class="row overflow-auto">
-                    <div class="col pt-4">
-                        <h3>Student Login</h3>
+            <div class="col d-flex flex-column h-sm-100 align-items-center">
+                <main class="row overflow-auto ">
+                    <div class="col pt-4 ">
+                        <h3> --- Student Login --- </h3><br>
                         <form action="home.html" method="POST">
-                            <div class="mb-3">
-                                <label for="username" class="form-label">Username</label>
-                                <input type="text" class="form-control" id="username" name="username" required>
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="mb-3 text-center ">
+                                        <label for="username" class="form-label">Username</label>
+                                        <input type="text" class="form-control" id="username" name="username" required>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="mb-3 text-center">
+                                        <label for="password" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="password" name="password" required>
+                                    </div>
+                                </div>
+                                <div class="row align-items-center">
+                                    <button type="submit" class="btn btn-primary mt-2">Log in</button>
+                                </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" name="password" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Log in</button>
                         </form>
                     </div>
                 </main>
@@ -89,8 +94,7 @@
                             <div class="col-md-12">
                                 <p>Eskisehir Technical University<br>
                                    Address: 123 Example Street, City, Country<br>
-                                   Phone: +123 456 7890<br>
-                                   Email: info@example.com</p>
+                                   Email: sevdeseceer@gmail.com</p>
                             </div>
                         </div>
                         <div class="row">
