--- a/sidebar.html
+++ b/sidebar.html
@@ -56,11 +56,6 @@
                                 </li>
                             </ul>
                         </li>
-                        
-                        <li>
-                            <a href="research.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-grid"></i><span class="ms-1 d-inline">Research</span></a>
-                        </li>
                         <li>
                             <a href="campuslife.html" class="nav-link px-sm-0 px-2">
                                 <i class="fs-5 bi-people"></i><span class="ms-1 d-inline">Campus-life</span> </a>
@@ -85,8 +80,7 @@
                             <div class="col-md-12">
                                 <p>Eskisehir Technical University<br>
                                    Address: 123 Example Street, City, Country<br>
-                                   Phone: +123 456 7890<br>
-                                   Email: info@example.com</p>
+                                   Email: sevdeseceer@gmail.com</p>
                             </div>
                         </div>
                         <div class="row">
