--- a/login.html
+++ b/login.html
@@ -39,22 +39,16 @@
                         </a>
                     </li>
                     <li>
-                        <a href="acadamics.html" class="nav-link px-sm-0 px-2">
-                            <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Acadamics</span></a>
+                        <a href="academics.html" class="nav-link px-sm-0 px-2">
+                            <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline">Academics</span></a>
                     </li>
-                    <li>
-                        <input type="checkbox" id="toggle-submenu1" class="collapse-checkbox">
-                        <label for="toggle-submenu1" class="nav-link px-0 align-middle" data-bs-toggle="collapse" data-bs-target="students.html">
-                            <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Students</span>
-                        </label>
-                        <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                            <li class="w-100">
-                                <a href="login.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Student-Login</span> </a>
-                            </li>
-                            <li>
-                                <a href="documents.html" class="nav-link px-0"> <span class="d-none d-sm-inline">Documents</span> </a>
-                            </li>
-                        </ul>
+                    <li class="student-item">
+                        <a class="nav-link px-sm-0 px-2" href="students.html">Students</a>
+                        <div class="d-none">
+                            <a class="nav-link px-sm-0 px-2" href="login.html">Log-in</a>
+                            <a class="nav-link px-sm-0 px-2" href="documents.html">Documents</a>
+                            <a class="nav-link px-sm-0 px-2" href="scholarships.html">Scholarship</a>
+                        </div>
                     </li>
                     <li>
                         <a href="campuslife.html" class="nav-link px-sm-0 px-2">
@@ -64,8 +58,8 @@
                 </div>
             </div>
             <div class="col d-flex flex-column h-sm-100 align-items-center">
-                <main class="row overflow-auto ">
-                    <div class="col pt-4 ">
+                <main class="row overflow-auto">
+                    <div class="col pt-4 login-frame">
                         <h3> --- Student Login --- </h3><br>
                         <form action="home.html" method="POST">
                             <div class="container-fluid">
@@ -98,7 +92,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <p>&copy; 2024 Eskisehir Technical University. All rights reserved. | Designed by Sevde Secer.</p>
+                            <div class="col-md-12">
+                                <p>&copy; 2024 Eskisehir Technical University. All rights reserved. | Designed by Sevde Secer.</p>
+                                <p> -- Our social media accounts --</p>
+                                <p><a href="https://www.instagram.com/eskisehirteknikuniv?igsh=MWxoaTlpcmZqZXhwdQ==" target="_blank"><i class="bi bi-instagram">Instagram</i></a> <a href="https://www.facebook.com/eskisehirteknikuniv" target="_blank"><i class="bi bi-facebook">Facebook</i></a> <a href="https://www.linkedin.com/school/eskisehirteknikuniv/?originalSubdomain=tr" target="_blank"><i class="bi bi-facebook">Linkedin</i></a> <a href="https://www.youtube.com/channel/UC-oGylb9E16KNqMnTP_kDoA" target="_blank"><i class="bi bi-facebook">Youtube</i></a></p>
+                            </div>
                         </div>
                     </div>
                 </footer>
