--- a/academics.html
+++ b/academics.html
@@ -41,22 +41,16 @@
                             </a>
                         </li>
                         <li>
-                            <a href="acadamics.html" class="nav-link px-sm-0 px-2">
-                                <i class="fs-5 bi-table"></i><span class="ms-1 d-inline">Acadamics</span></a>
+                            <a href="academics.html" class="nav-link px-sm-0 px-2">
+                                <i class="fs-5 bi-table"></i><span class="ms-1 d-inline">Academics</span></a>
                         </li>
-                        <li>
-                            <input type="checkbox" id="toggle-submenu1" class="collapse-checkbox  ms-1 ps-1">
-                            <label for="toggle-submenu1" class="nav-link px-sm-0 px-2 align-middle" data-bs-toggle="collapse" data-bs-target="students.html">
-                                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-inline">Students</span>
-                            </label>
-                            <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                                <li class="w-100">
-                                    <a href="login.html" class="nav-link px-0"> <span class= "d-inline">Student-Login</span> </a>
-                                </li>
-                                <li>
-                                    <a href="documents.html" class="nav-link px-0"> <span class= "d-inline">Documents</span> </a>
-                                </li>
-                            </ul>
+                        <li class="student-item">
+                            <a class="nav-link px-sm-0 px-2" href="students.html">Students</a>
+                            <div class="d-none">
+                                <a class="nav-link px-sm-0 px-2" href="login.html">Log-in</a>
+                                <a class="nav-link px-sm-0 px-2" href="documents.html">Documents</a>
+                                <a class="nav-link px-sm-0 px-2" href="scholarships.html">Scholarship</a>
+                            </div>
                         </li>
                         <li>
                             <a href="campuslife.html" class="nav-link px-sm-0 px-2">
@@ -76,6 +70,7 @@
                                         <th>Faculty</th>
                                         <th>Dean</th>
                                         <th>Contact</th>
+                                        <th>Information</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -83,26 +78,34 @@
                                         <td>Faculty of Arts</td>
                                         <td>Prof. Emily Williams</td>
                                         <td>arts@example.com</td>
+                                        <td>Fosters creativity and critical thinking through its diverse range of programs. Prepares well-rounded individuals for success in the global arena.</td>
                                     </tr>
                                     <tr>
                                         <td>Faculty of Business</td>
                                         <td>Dr. Sarah Lee</td>
                                         <td>business@example.com</td>
+                                        <td>Equips students with the skills and knowledge needed to thrive in today's competitive business landscape. Prepares them to make a meaningful impact in the corporate world.</td>
                                     </tr>
                                     <tr>
                                         <td>Faculty of Law</td>
                                         <td>Prof. David Brown</td>
                                         <td>law@example.com</td>
+                                        <td>Nurtures the next generation of legal professionals who uphold justice, integrity, and equality under the law. Prepares competent advocates for societal change.</td>
+
                                     </tr>
                                     <tr>
-                                        <td>Faculty of Medicine</td>
+                                        <td>Faculty of Engineering</td>
                                         <td>Dr. Elizabeth Taylor</td>
-                                        <td>medicine@example.com</td>
+                                        <td>engineering@example.com</td>
+                                        <td>Stands as a beacon of excellence in engineering education and research. Produces innovative engineers and advances technological solutions for societal challenges.</td>
+
                                     </tr>
                                     <tr>
                                         <td>Faculty of Social Sciences</td>
                                         <td>Prof. Michael Garcia</td>
                                         <td>social@example.com</td>
+                                        <td>Committed to understanding and addressing complex societal challenges. Empowers students to effect positive change and promote social justice.</td>
+
                                     </tr>
                                 </tbody>
                             </table>
@@ -113,6 +116,7 @@
                                         <th>Institute</th>
                                         <th>Director</th>
                                         <th>Contact</th>
+                                        <th>Information</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -120,26 +124,31 @@
                                         <td>Institute of Technology</td>
                                         <td>Dr. Peter Wilson</td>
                                         <td>technology@example.com</td>
+                                        <td>Drives advancements across various fields from engineering to computer science. Offers a dynamic learning environment for shaping the future of technology-driven societies.</td>
                                     </tr>
                                     <tr>
                                         <td>Institute of Management</td>
                                         <td>Prof. Olivia Martinez</td>
                                         <td>management@example.com</td>
+                                        <td>Cultivates visionary leaders and strategic thinkers equipped to navigate the complexities of the modern business landscape. Drives organizational success and societal impact.</td>
                                     </tr>
                                     <tr>
                                         <td>Institute of Education</td>
                                         <td>Dr. Christopher Adams</td>
                                         <td>education@example.com</td>
+                                        <td>Dedicated to excellence in teaching, research, and community engagement. Prepares educators, policymakers, and researchers to address diverse educational challenges.</td>
                                     </tr>
                                     <tr>
                                         <td>Institute of Agriculture</td>
                                         <td>Prof. Samantha Brown</td>
                                         <td>agriculture@example.com</td>
+                                        <td>Advances sustainable farming practices and food security initiatives. Contributes to the resilience and prosperity of rural communities and global food systems.</td>
                                     </tr>
                                     <tr>
                                         <td>Institute of Architecture</td>
                                         <td>Dr. Daniel Thompson</td>
                                         <td>architecture@example.com</td>
+                                        <td>Fosters creativity, sustainability, and social responsibility in the built environment. Empowers students to envision architectural solutions that enhance quality of life.</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -150,6 +159,7 @@
                                         <th>Name</th>
                                         <th>Director</th>
                                         <th>Contact</th>
+                                        <th>Information</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -157,26 +167,31 @@
                                         <td>Vocational School of Engineering</td>
                                         <td>Prof. Andrew Wilson</td>
                                         <td>engineering@example.com</td>
+                                        <td>Prepares students with hands-on training in engineering disciplines. Equips graduates with practical skills for careers in various engineering fields.</td>
                                     </tr>
                                     <tr>
                                         <td>Vocational School of Business</td>
                                         <td>Dr. Jessica Martinez</td>
                                         <td>business@example.com</td>
+                                        <td>Provides comprehensive business education with a focus on practical application. Prepares students for success in diverse sectors of the business world.</td>
                                     </tr>
                                     <tr>
                                         <td>Vocational School of Information Technology</td>
                                         <td>Dr. Christopher Davis</td>
                                         <td>it@example.com</td>
+                                        <td>Offers specialized training in cutting-edge IT skills and technologies. Prepares graduates for careers in software development, cybersecurity, and digital innovation.</td>
                                     </tr>
                                     <tr>
                                         <td>Vocational School of Tourism</td>
                                         <td>Prof. Emma Thompson</td>
                                         <td>tourism@example.com</td>
+                                        <td>Explores the hospitality industry and tourism management principles. Equips students with skills for careers in travel agencies, hotels, and event management.</td>
                                     </tr>
                                     <tr>
                                         <td>Vocational School of Design</td>
                                         <td>Dr. Alexander Garcia</td>
                                         <td>design@example.com</td>
+                                        <td>Nurtures creativity and technical skills in various design disciplines. Prepares students for careers in graphic design, interior design, and multimedia production.</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -193,7 +208,10 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-md-12">
                                 <p>&copy; 2024 Eskisehir Technical University. All rights reserved. | Designed by Sevde Secer.</p>
+                                <p> -- Our social media accounts --</p>
+                                <p><a href="https://www.instagram.com/eskisehirteknikuniv?igsh=MWxoaTlpcmZqZXhwdQ==" target="_blank"><i class="bi bi-instagram">Instagram</i></a> <a href="https://www.facebook.com/eskisehirteknikuniv" target="_blank"><i class="bi bi-facebook">Facebook</i></a> <a href="https://www.linkedin.com/school/eskisehirteknikuniv/?originalSubdomain=tr" target="_blank"><i class="bi bi-facebook">Linkedin</i></a> <a href="https://www.youtube.com/channel/UC-oGylb9E16KNqMnTP_kDoA" target="_blank"><i class="bi bi-facebook">Youtube</i></a></p>
                             </div>
                         </div>
                     </div>
