--- a/scholarships.html
+++ b/scholarships.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campus Life</title>
+    <title>Students</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/sidebar.css">
 </head>
@@ -59,22 +59,72 @@
             </div>
             <div class="col d-flex flex-column h-sm-100">
                 <main class="row overflow-auto">
-                    <div class="pt-4">
-                        <div class="container-fluid">
-                            <h4 class="m-4">Campus Life</h4>
-                            <div class="row">
-                              <div class="col-sm-3 "></div>
-                              <div class="col-sm-8">
-                                <div class="iframe-container">
-                                  <iframe width="550" height="315" src="https://www.youtube.com/embed/QlmweWNcgEI" title="Estu campus life"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
+                    <div class="col pt-4">
+                        <div class="container text-center">
+                            <h3>Scholarships</h3>
+                            <br>
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Scholarship Name</th>
+                                        <th scope="col">Eligibility Criteria</th>
+                                        <th scope="col">Amount</th>
+                                        <th scope="col">Deadline</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Merit Scholarship</td>
+                                        <td>Top 10% of the class</td>
+                                        <td>$1000</td>
+                                        <td>22 May 2024</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Need-Based Scholarship</td>
+                                        <td>Based on financial need</td>
+                                        <td>$500</td>
+                                        <td>20 May 2024</td>
+                                    </tr>
+                                    <tr>
+                                        <td>STEM Scholarship</td>
+                                        <td>Major in science, technology, engineering, or mathematics</td>
+                                        <td>$1500</td>
+                                        <td>19 May 2024</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Community Service Scholarship</td>
+                                        <td>Active involvement in community service projects</td>
+                                        <td>$750</td>
+                                        <td>19 May 2024</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Minority Scholarship</td>
+                                        <td>Belonging to underrepresented minority groups</td>
+                                        <td>$1000</td>
+                                        <td>16 May 2024</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sports Scholarship</td>
+                                        <td>Outstanding performance in sports</td>
+                                        <td>$2000</td>
+                                        <td>15 May 2024</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Arts Scholarship</td>
+                                        <td>Demonstrated talent in visual or performing arts</td>
+                                        <td>$1000</td>
+                                        <td>11 May 2024</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <br>
+                        <div class="container text-center">
+                            <p>If you wish to apply for a scholarship, you can submit your required documents using your school email, specifying the scholarship you are applying for. Applications will be evaluated within one week after the deadline, and you will be contacted accordingly.</p>
+                        </div>
                     </div>
                 </main>
+                <br>
                 <footer class="row bg-light py-4 mt-auto text-center">
                     <div class="container">
                         <div class="row">
