That's it for today.

--- a/academics.html
+++ b/academics.html
@@ -43,7 +43,7 @@
             class="d-flex flex-sm-column flex-row flex-grow-1 align-items-sm-start px-3 pt-2 text-white"
           >
             <ul
-              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start"
+              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start position-fixed"
             >
               <li class="nav-item">
                 <a href="home.html" class="nav-link px-sm-0 px-2">
@@ -200,7 +200,7 @@
           <main class="row overflow-auto">
             <div class="col pt-4">
               <div class="container">
-                <h3>Faculties</h3>
+                <h3 class="text-center">--- Faculties ---</h3>
                 <table>
                   <thead>
                     <tr>
@@ -265,7 +265,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <h3>Institutes</h3>
+                <h3 class="text-center">--- Institutes ---</h3>
                 <table>
                   <thead>
                     <tr>
@@ -332,7 +332,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <h3>Vocational Higher Schools</h3>
+                <h3 class="text-center">--- Vocational Higher Schools ---</h3>
                 <table>
                   <thead>
                     <tr>
