--- a/documents.html
+++ b/documents.html
@@ -43,7 +43,7 @@
             class="d-flex flex-sm-column flex-row flex-grow-1 align-items-sm-start px-3 pt-2 text-white"
           >
             <ul
-              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start"
+              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start position-fixed"
             >
               <li class="nav-item">
                 <a href="home.html" class="nav-link px-sm-0 px-2">
