--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
             class="d-flex flex-sm-column flex-row flex-grow-1 align-items-sm-start px-3 pt-2 text-white"
           >
             <ul
-              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start"
+              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start position-fixed"
             >
               <li class="nav-item">
                 <a href="home.html" class="nav-link px-sm-0 px-2">
@@ -312,7 +312,6 @@
               </li>
             </ul>
           </div>
-
           <footer class="row bg-light py-4 pb-4 mt-auto text-center">
             <div class="container">
               <div class="row">
