--- a/scholarships.html
+++ b/scholarships.html
@@ -42,7 +42,7 @@
             class="d-flex flex-sm-column flex-row flex-grow-1 align-items-sm-start px-3 pt-2 text-white"
           >
             <ul
-              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start"
+              class="nav nav-pills flex-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 align-items-sm-start position-fixed"
             >
               <li class="nav-item">
                 <a href="home.html" class="nav-link px-sm-0 px-2">
@@ -199,7 +199,7 @@
           <main class="row overflow-auto">
             <div class="col pt-4">
               <div class="container text-center">
-                <h3>Scholarships</h3>
+                <h3>--- Scholarships ---</h3>
                 <br />
                 <table class="table">
                   <thead>
