little changes added.

--- a/academics.html
+++ b/academics.html
@@ -79,7 +79,7 @@
               </li>
               <li>
                 <a href="academics.html" class="nav-link px-sm-0 px-2">
-                  <span class="ms-1 d-none d-sm-inline">Academics</span>
+                  <span class="ms-1 d-none d-sm-inline" style="font-size: larger;">Academics</span>
                   <span class="ms-1 d-inline d-sm-none">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
