--- a/campuslife.html
+++ b/campuslife.html
@@ -97,7 +97,7 @@
               </li>
               <li>
                 <a href="campuslife.html" class="nav-link px-sm-0 px-2">
-                  <span class="ms-1 d-none d-sm-inline">Campus-life</span>
+                  <span class="ms-1 d-none d-sm-inline" style="font-size: larger;">Campus-life</span>
                   <span class="ms-1 d-inline d-sm-none">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -199,7 +199,7 @@
           <main class="row overflow-auto">
             <div class="pt-4">
               <div class="container-fluid">
-                <h4 class="m-4">Campus Life</h4>
+                <h4 class="m-4 text-center">--- Campus Life ---</h4>
                 <div class="row d-flex justify-content-center">
                   <div class="iframe-container d-flex justify-content-center">
                     <iframe
