--- a/students.html
+++ b/students.html
@@ -117,7 +117,7 @@
               </li>
               <li class="student-item">
                 <a class="nav-link px-sm-0 px-2" href="students.html">
-                  <span class="ms-1 d-none d-sm-inline">Students</span>
+                  <span class="ms-1 d-none d-sm-inline" style="font-size: larger;">Students</span>
                   <span class="ms-1 d-inline d-sm-none">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
