--- a/scholarships.html
+++ b/scholarships.html
@@ -133,7 +133,7 @@
                     </svg>
                   </span>
                 </a>
-                <div id="hidden-nav-items" class="d-none">
+                <div id="hidden-nav-items">
                   <a class="nav-link px-sm-0 px-2" href="login.html">
                     <span class="ms-1 d-none d-sm-inline">Log-in</span>
                     <span class="ms-1 d-inline d-sm-none">
@@ -171,7 +171,7 @@
                     </span>
                   </a>
                   <a class="nav-link px-sm-0 px-2" href="scholarships.html">
-                    <span class="ms-1 d-none d-sm-inline">Scholarship</span>
+                    <span class="ms-1 d-none d-sm-inline" style="font-size: larger;">Scholarship</span>
                     <span class="ms-1 d-inline d-sm-none">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
