--- a/university.html
+++ b/university.html
@@ -68,7 +68,7 @@
               </li>
               <li>
                 <a href="university.html" class="nav-link px-sm-0 px-2">
-                  <span class="ms-1 d-none d-sm-inline">University</span>
+                  <span class="ms-1 d-none d-sm-inline" style="font-size: larger;">University</span>
                   <span class="ms-1 d-inline d-sm-none">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
