student page created.

--- a/home.html
+++ b/home.html
@@ -207,112 +207,61 @@
               />
             </div>
           </main>
-          <div class="container container-fluid">
-            <h4 class="text-center p-3">--- Announcements ---</h4>
-            <ul class="list-group list-group-flush m-4">
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Student Exchange Program with Leading Universities
-                  <span>!! NEW !!</span>
-                  <span>09.05.2024</span>
+          <div>
+            <h4 class="text-center p-3 pt-5 ">--- Announcements ---</h4>
+            <ul>
+              <div class="list-group border border-secondary m-4">
+                <a href="#" class="list-group-item list-group-item-action list-group-item flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Career Fair with Giant Companies</h5>
+                    <small>!! NEW !!</small>
+                  </div>
+                  <p class="mb-1">Explore job opportunities and internships with top companies at our Career Fair event.</p>
+                  <small>08.05.2024</small>
                 </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Career Fair with Giant Companies
-                  <span>08.05.2024</span>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Student Exchange Program with Leading Universities</h5>
+                    <small class="text-muted">5 days ago</small>
+                  </div>
+                  <p class="mb-1">Join our Student Exchange Program to experience diverse cultures and academic environments.</p>
+                  <small class="text-muted">03.05.2024</small>
                 </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Volunteer Opportunity
-                  <span>08.05.2024</span>
+                <a href="#" class="list-group-item list-group-item-action list-group-item flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Volunteer Opportunity</h5>
+                    <small class="text-muted">6 days ago</small>
+                  </div>
+                  <p class="mb-1">Make a difference in your community by participating in our Volunteer Opportunity program.</p>
+                  <small class="text-muted">02.05.2024</small>
                 </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Sustainable Ecosystem Days
-                  <span>07.05.2024</span>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Tech Symposium 2024</h5>
+                    <small>1 week ago</small>
+                  </div>
+                  <p class="mb-1">Join leading experts and innovators at our Tech Symposium 2022 to explore the latest trends and technologies.</p>
+                  <small>01.05.2024</small>
                 </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Workshop on Entrepreneurship
-                  <span>07.05.2024</span>
+                <a href="#" class="list-group-item list-group-item-action list-group-item flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Art Exhibition: "Expressions of Nature"</h5>
+                    <small class="text-muted">2 weeks ago</small>
+                  </div>
+                  <p class="mb-1">Experience the beauty of nature through art at our "Expressions of Nature" exhibition.</p>
+                  <small class="text-muted">24.04.2024</small>
                 </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Lecture Series on Climate Change
-                  <span>06.05.2024</span>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary flex-column align-items-start">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Guest Lecture Series: "Future of Sustainability"</h5>
+                    <small class="text-muted">3 weeks ago</small>
+                  </div>
+                  <p class="mb-1">Join us for insightful discussions on the future of sustainability with leading experts.</p>
+                  <small class="text-muted">17.04.2024</small>
                 </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Coding Bootcamp Registration Open
-                  <span>05.05.2024</span>
-                </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  International Cultural Exchange Week
-                  <span>03.05.2024</span>
-                </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Seminar on Artificial Intelligence
-                  <span>02.05.2024</span>
-                </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Science and Technology Symposium
-                  <span>02.05.2024</span>
-                </a>
-              </li>
-              <li class="list-group-item">
-                <a
-                  href="#"
-                  class="d-flex justify-content-between align-items-center"
-                >
-                  Research Paper Competition Deadline Extended
-                  <span>02.05.2024</span>
-                </a>
-              </li>
+              </div>
             </ul>
-          </div>
-          <footer class="row bg-light py-4 pb-4 mt-auto text-center">
+            <footer class="row bg-light py-4 pb-4 mt-auto text-center">
             <div class="container">
               <div class="row">
                 <div class="col-md-12">
