--- a/students.html
+++ b/students.html
@@ -195,41 +195,36 @@
             </ul>
           </div>
         </div>
-        <div class="col-9 d-flex flex-column h-sm-100">
+        <div class="col-9 d-flex flex-column h-sm-100 align-items-center">
+
           <main class="row overflow-auto">
             <div class="col pt-4">
-              <h3>Vertical Sidebar that switches to Horizontal Navbar</h3>
-              <p class="lead">
-                An example multi-level sidebar with collasible menu items. The
-                menu functions like an "accordion" where only a single menu is
-                be open at a time.
-              </p>
-              <br />
-              <h3>More content...</h3>
-              <p>
-                Sriracha biodiesel taxidermy organic post-ironic, Intelligentsia
-                salvia mustache 90's code editing brunch. Butcher polaroid VHS
-                art party, hashtag Brooklyn deep v PBR narwhal sustainable
-                mixtape swag wolf squid tote bag. Tote bag cronut semiotics, raw
-                denim deep v taxidermy messenger bag. Tofu YOLO Etsy, direct
-                trade ethical Odd Future jean shorts paleo. Forage Shoreditch
-                tousled aesthetic irony, street art organic Bushwick artisan
-                cliche semiotics ugh synth chillwave meditation. Shabby chic
-                lomo plaid vinyl chambray Vice. Vice sustainable cardigan,
-                Williamsburg master cleanse hella DIY 90's blog.
-              </p>
-              <p>
-                Ethical Kickstarter PBR asymmetrical lo-fi. Dreamcatcher street
-                art Carles, stumptown gluten-free Kickstarter artisan Wes
-                Anderson wolf pug. Godard sustainable you probably haven't heard
-                of them, vegan farm-to-table Williamsburg slow-carb readymade
-                disrupt deep v. Meggings seitan Wes Anderson semiotics, cliche
-                American Apparel whatever. Helvetica cray plaid, vegan brunch
-                Banksy leggings +1 direct trade. Wayfarers codeply PBR selfies.
-                Banh mi McSweeney's Shoreditch selfies, forage fingerstache food
-                truck occupy YOLO Pitchfork fixie iPhone fanny pack art party
-                Portland.
-              </p>
+              <img src="https://ogrencikulupleri.eskisehir.edu.tr/Uploads/ogrencikulupleri/images/FullSizeRender-1.jpeg" alt="">
+            </div>
+        </main>
+          <main class="row overflow-auto align-items-center">
+            <div class="col-12 pt-4">
+              <ul>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/avrupa-elektrik-muhendisligi-ogrencileri-kulubu-eestec">Avrupa Elektrik Mühendisliği Öğrencileri Kulübü (EESTEC)</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/blockchain-kulubu?icerikonizle=true">Blockchain Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/endustri-ve-verimlilik-kulubu">Endüstri ve Verimlilik Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/ieee-eskisehir-teknik-universitesi-ogrenci-kolu-kulubu">IEEE Eskişehir Teknik Üniversitesi Öğrenci Kolu Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/iha-kulubu?icerikonizle=true">İHA Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/kimya-ve-teknolojileri-kulubu">Kimya ve Teknolojileri Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/savunma-sanayii-ve-teknolojileri-kulubu">Savunma Sanayii ve Teknolojileri Kulübü (SASTEK)</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/sivil-havacilik-kulubu">Sivil Havacılık Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/veri-bilimi-kulubu?icerikonizle=true">Veri Bilimi Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/yapi-kulubu">Yapı Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/yazilim-kulubu">Yazılım Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/dans-kulubu">Dans Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/dusunce-ve-gelisim-kulubu">Düşünce ve Gelişim Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/e-spor-kulubu-2">E-Spor Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/fotografcilik-kulubu?icerikonizle=true">Fotoğrafçılık Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/izcilik-ve-doga-sporlari-kulubu?icerikonizle=true">İzcilik ve Doğa Sporları Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/ortak-alan-kulubu?icerikonizle=true">Ortak Alan&nbsp;Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/satranc-ve-zeka-oyunlari-kulubu?icerikonizle=true">Satranç ve Zeka Oyunları Kulübü</a></li>
+                <li><a href="https://ogrencikulupleri.eskisehir.edu.tr/tr/Icerik/Detay/tiyatro-kulubu">Tiyatro Kulübü</a></li>
+              </ul>
             </div>
           </main>
           <footer class="row bg-light py-4 pb-4 mt-auto text-center">
@@ -237,8 +232,8 @@
               <div class="row">
                 <div class="col-md-12">
                   <p>
-                    Eskisehir Technical University<br />
-                    Address: 123 Example Street, City, Country<br />
+                    Eskisehir Technical University<br/>
+                    Address: 123 Example Street, City, Country<br/>
                     Email: sevdeseceer@gmail.com
                   </p>
                 </div>
